set content language to en, added codepen link, fixed blog canvas misalignment.

--- a/less/portfolio.less
+++ b/less/portfolio.less
@@ -278,6 +278,9 @@ h2 {
   max-width: 700px;
   // padding: 0 25px;
   // margin-top: 80px;
+  .mainContainer {
+    box-sizing: content-box;
+  }
 }
 
 #firstBlog {
